PacketAnalysis further breakdown.