@@ -8,11 +8,10 @@ import de.photon.AACAdditionPro.modules.PatternModule;
 import de.photon.AACAdditionPro.user.User;
 import de.photon.AACAdditionPro.user.data.PacketAnalysisData;
 import de.photon.AACAdditionPro.util.VerboseSender;
-import de.photon.AACAdditionPro.util.packetwrappers.WrapperPlayServerKeepAlive;
 
-public class KeepAliveIgnoredPattern extends PatternModule.PacketPattern
+class KeepAliveIgnoredPattern extends PatternModule.PacketPattern
 {
-    public KeepAliveIgnoredPattern()
+    KeepAliveIgnoredPattern()
     {
         super(ImmutableSet.of(PacketType.Play.Server.KEEP_ALIVE));
     }
@@ -20,12 +19,9 @@ public class KeepAliveIgnoredPattern extends PatternModule.PacketPattern
     @Override
     protected int process(User user, PacketContainer packetContainer)
     {
-        final WrapperPlayServerKeepAlive serverKeepAliveWrapper = new WrapperPlayServerKeepAlive(packetContainer);
-        user.getPacketAnalysisData().getKeepAlives().add(new PacketAnalysisData.KeepAlivePacketData(serverKeepAliveWrapper.getKeepAliveId()));
-
         // Check on sending to force the client to respond in a certain time-frame.
         if (user.getPacketAnalysisData().getKeepAlives().size() > PacketAnalysisData.KEEPALIVE_QUEUE_SIZE &&
-            !user.getPacketAnalysisData().getKeepAlives().remove(0).hasRegisteredResponse())
+            !user.getPacketAnalysisData().getKeepAlives().removeFirst().hasRegisteredResponse())
         {
             VerboseSender.getInstance().sendVerboseMessage("PacketAnalysisData-Verbose | Player: " + user.getPlayer().getName() + " ignored KeepAlive packet.");
             return 10;
